fix(visualization): left align data table

--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -55,11 +55,11 @@
     overflow-x: hidden;
 }
 
-/* Main center */
+/* Main canvas */
 
 .mainCenterCanvas {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     height: 100%;
     overflow: hidden;
     position: relative;
